--- a/app/src/main/res/layout/activity_new_journey_detail.xml
+++ b/app/src/main/res/layout/activity_new_journey_detail.xml
@@ -200,7 +200,7 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/button_small_style"
             android:onClick="displayPhoto"
-            android:text="View Photos"
+            android:text="View Photo"
             android:textSize="14sp"
             android:textColor="#1D422F" />
 
